@@ -1,3 +1,10 @@
+2006-09-04  Andrew Johnson  <acjgenius@earthlink.net>
+
+	* engines/smooth/src/engine/smooth_gtk2_drawing.c:
+	* engines/smooth/src/engine/smooth_gtk2_misc.c:
+
+	- Add some missing null widget checks
+	
 2006-09-04  Benjamin Berg  <benjamin@sipsolutions.net>
 
 	* configure.ac:
